# ddrvlatest

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile  README
.github/workflows/: build.yml
cloudflare-worker/: index.js  package.json  wrangler.toml
config/: config_example.yaml
internal/http/web/static/: app.js  index.html  main.css  main.js  manifest.json  style.css  sw.js
pkg/lreader/: lreader_test.go
src/: config.rs  main.rs  migration.rs  tracker.rs
src/dataprovider/: mod.rs  types.rs
src/dataprovider/boltdb/: mod.rs
src/dataprovider/postgres/: mod.rs
src/ddrv/: limiter.rs  mod.rs  nwriter.rs  reader.rs  rest.rs  types.rs  utils.rs  writer.rs
src/ftp/: mod.rs
src/http/: mod.rs  web.rs
src/http/api/: auth.rs  dirs.rs  files.rs  mod.rs  types.rs
